# TRiver

./: .gitignore  README.md  meson.build  mlv.knrf.TRiver.json  requirements.txt
data/: meson.build  mlv.knrf.TRiver.desktop
src/: .main.py.swp  TRiver.in  main.py  meson.build
src/windows/: TRiver_windows.py  requirements.txt
