configure_file(
  input: 'mlv.knrf.TRiver.desktop',
  output: 'mlv.knrf.TRiver.desktop',
  copy: true,
  install: true,
  install_dir: join_paths(get_option('datadir'), 'applications')
)

install_data('mlv.knrf.TRiver.svg',
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'apps'))
